Revert "fixing meditation for liberation image on mobile hopefullly"
This reverts commit 91c03743d90508d5ebc9473371a899b827052a8a.

--- a/style.scss
+++ b/style.scss
@@ -665,14 +665,6 @@ nav {
   -webkit-column-break-inside: avoid;
 }
 
-.mobile-full-width-image {
-  @include mobile {
-    width: calc(100% + 40px);
-    margin-left: -20px;
-    max-width: none;
-  }
-}
-
 .wrapper-footer {
   margin-top: 50px;
   border-top: 1px solid #ddd;
